sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_PO__c/Vendor_Invoice_PO__c.object-meta.xml
<CustomObject>
    <label>Vendor Invoice PO</label>
    <nameField>
        <displayFormat>VIPO-{0000000}</displayFormat>
        <label>Vendor Invoice PO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoice POs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>