sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_PO__c/fields/PO_Sanergy_Cost__c.field-meta.xml
<CustomField>
    <fullName>PO_Sanergy_Cost__c</fullName>
    <formula>Purchase_Order__r.Total_Sanergy_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Sanergy Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>