sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_PO__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Purchase_Order__c.Firm_Date__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Vendor Invoice POs</relationshipLabel>
    <relationshipName>Vendor_Invoice_POs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>