sfSandBoxCode/force-app/main/default/objects/Vendor_Invoice_PO__c/fields/Vendor_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Invoice__c</fullName>
    <label>Vendor Invoice</label>
    <referenceTo>Vendor_Invoice__c</referenceTo>
    <relationshipLabel>Vendor Invoice POs</relationshipLabel>
    <relationshipName>Vendor_Invoice_POs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>